[tool.poetry]
name = "penguin-party"
version = "0.1.0"
description = ""
authors = ["AceBee007 <zykgcz@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
ipykernel = "^6.25.1"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
